# jdataclass

./: .coveragerc  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: python-build.yml  python-publish.yml
docs/: conf.py  index.rst  jdataclass.rst  modules.rst
examples/: metadata_policy.json  metadata_policy.py  metadata_policy_with_insigths_reader.json  person.py  purview_collection.py
jdataclass/: __init__.py  constants.py  dataclass_utils.py  defaultdict.py  defaultlist.py  dict_utils.py  jdataclass.py  jfield.py  jproperty.py  types.py  typing_utils.py
