[tool.poetry]
name = "jdataclass"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
coverage = "^7.2.7"
black = "^23.3.0"
flake8 = "^6.0.0"
pyright = "^1.1.314"
pylint = "^2.17.4"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[tool.black]
line-length = 80
target-version = ['py311']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
